@@ -1,8 +1,8 @@
 Package: ecoval
 Type: Package
 Title: Procedures for Ecological Assessment of Surface Waters
-Version: 1.2.2
-Date: 2019-03-09
+Version: 1.2.3
+Date: 2019-03-26
 Author: Nele Schuwirth <nele.schuwirth@eawag.ch> and Peter Reichert <peter.reichert@eawag.ch> 
   with contributions by Simone Langhans and Christian Michel
 Maintainer: Nele Schuwirth <nele.schuwirth@eawag.ch>
@@ -14,6 +14,6 @@ License: GPL-3
 Depends: utility, rivernet, jpeg
 LazyData: true
 NeedsCompilation: no
-Packaged: 2019-03-09 17:11:48 UTC; peter
+Packaged: 2019-03-26 07:12:12 UTC; reichert
 Repository: CRAN
-Date/Publication: 2019-03-18 07:50:03 UTC
+Date/Publication: 2019-03-26 16:10:03 UTC
