@@ -1,4 +1,4 @@
-4c71a4c8ed883f16c4302d82b2f9808f *DESCRIPTION
+b96b56259849ff5f52b54d37ecdc0c98 *DESCRIPTION
 851667a73b0ae10d7769f96bf7803a09 *NAMESPACE
 e4587fa3be329c82ebe65fc38053a5f4 *R/ecoval.plotsymbols.r
 a50ceee4d1d9340e62b1a88b4a8f6190 *R/ecoval.r
@@ -8,12 +8,12 @@ f398fc281029e53bb835fb669b1a5d15 *R/msk.diatoms.2007.r
 c96f32967699ce1444e7a3c3d51efad6 *R/msk.fish.2004.r
 6d4c5c85ff655e9386193721216e443e *R/msk.hydrol.2011.r
 c167ce18d671a625a9f25e09ff004b85 *R/msk.invertebrates.2010.r
-635125b8ff2db62615691d5a4aab4701 *R/msk.macrophytes.2017.calc.types.r
-188fa81374a9b68ac88bc0e4a612e5c8 *R/msk.macrophytes.2017.doc.R
+385b902127cdae5dc7c04058ea5f0c79 *R/msk.macrophytes.2017.calc.types.r
+12c495db4911ce783517059dbfe56dd0 *R/msk.macrophytes.2017.doc.R
 c8df1f401391340f9264bdc6e0eef093 *R/msk.macrophytes.2017.plaus.crit.R
-783e746024aec9d5b3877bebb6ccbf8a *R/msk.macrophytes.2017.prepare.data.R
+34e71f2f828785a91c9ce6069f690cae *R/msk.macrophytes.2017.prepare.data.R
 98850c0050aa4533b4efe73322c26481 *R/msk.macrophytes.2017.r
-42edc509c1688e3aa49712c921fe03ff *R/msk.macrophytes.2017.read.compile.evaluate.R
+5be6c4827cfcac278d649f03cd9c7e77 *R/msk.macrophytes.2017.read.compile.evaluate.R
 2ac81edeffab8d892a41b1f1b245bcfc *R/msk.morphol.1998.r
 cf29e2b4b0d8fdef1e6ec6dd8a0a6ca6 *R/msk.nutrients.2010.r
 df13c9bfba7cc3f87c027fbdf06a781e *R/msk.physapp.2007.r
@@ -23,25 +23,25 @@ b1bd4483ea43417272fc4d3f0905466d *R/val.heavymetals.r
 6fd4d702c4430ae1af6356e0f2881f31 *R/val.micropoll.r
 1c48f57e36076cfc14c9f8c71f42c543 *R/val.pesticides.r
 36d30a7475c880341d56c355fca4c6a1 *R/val.spear.r
-8d88703eed07a5b15cd617867119f1bf *data/ecoval_data.RData
-39e4e354a5bc75e5148dccf14fb94d82 *inst/NEWS
-0fae2ddf0e55c21f8d065eb8a2725aff *inst/ecoval.dictionaries.default.dat
+5acbf62c965b3c2d3304f5a5aecff32a *data/ecoval_data.RData
+45f6e657b3d22a068350988554e410ae *inst/NEWS
+383c2c9f9cf76060cc7a019abc05b85c *inst/ecoval.dictionaries.default.dat
 a9a12605ac8ec47ef0eaf819b6e30fdf *inst/ecoval_manual_plots.r
 d4c4ef171bfb5fcba04be0cdb67bd717 *inst/msk.macrophytes.2017_ListTaxa.dat
 5bde5920014e5b60509cc142a05e1eee *inst/msk.macrophytes.2017_RiverTypes_DefLimitsUnc.dat
 bba7aab399abb17c41be1db2d19e8a81 *inst/msk.macrophytes.2017_RiverTypes_DefObsUnc.dat
 d23e521f5f4d6999791fe3ab38b8fcee *inst/msk.macrophytes.2017_RiverTypes_DefStruct.dat
-df4de74bf86e10377db254266db1d55f *man/ecoval-package.Rd
+6c82fb44eed68586907dd7afc1875fb8 *man/ecoval-package.Rd
 3f1259d11e192aa01a3b8878ed6d0869 *man/ecoval.dict.Rd
 bb1307e6a6af63bc315c0d3fb21a0bcc *man/ecoval.dictionaries.default.Rd
 f208b27d5e32a1874127df9036289c01 *man/ecoval.plotsymbols.Rd
 bd1b0bd057ba3625bdfaef5416ad9a29 *man/ecoval.river.create.Rd
 9fd4111269762dc22939770a82f9b16f *man/ecoval.translate.Rd
-7c6e1e367d408faaea8b729d9d7122dd *man/figures/lakemorphol2016.pdf
+378a1ea5e604d9fab7bb50fabfa81dbd *man/figures/lakemorphol2016.pdf
 344ae730ead3f8ebd428e8a0e49700bd *man/figures/lakemorphol2016.png
-4cdd0268a152241629331cfe1e66adad *man/figures/lakemorphol2016French.pdf
+bc6f416e25b8858702ccd7ef1ab5ad10 *man/figures/lakemorphol2016French.pdf
 f5282832b04009c1d7259f8fd477ed95 *man/figures/lakemorphol2016French.png
-11585f34273318a22d9a987e387f410b *man/figures/lakemorphol2016German.pdf
+1b4f1948f2691b0bc4921743fe276d52 *man/figures/lakemorphol2016German.pdf
 d5121b7634b08c7519b9304844a05e50 *man/figures/lakemorphol2016German.png
 6a486b51365848aadf3682e018ae49d8 *man/lake.morphol.2016.aggregate.val.spatial.Rd
 f358cc735e427e6c8922e15c4ce9fb2b *man/lake.morphol.2016.create.Rd
@@ -63,7 +63,7 @@ b3f7ed2a24e0addfb15cf8d4c5683f94 *man/msk.macrophytes.2017.doc.site.Rd
 2a3f4b74ade3192e5f5b8bb1ac242535 *man/msk.macrophytes.2017.plot.hierarchy.Rd
 91343567f4518ffcc6fda9a333ac8541 *man/msk.macrophytes.2017.plot.typedef.Rd
 cf21e68562d9025e546a44e9275bef8c *man/msk.macrophytes.2017.plot.types.grfo.Rd
-6cf22b47439e86c08ab0c0b2eebe79a7 *man/msk.macrophytes.2017.plot.types.scheme.Rd
+353151809d5fccab971e815944ef2df0 *man/msk.macrophytes.2017.plot.types.scheme.Rd
 495835654d8f5df1e926d81df1429adc *man/msk.macrophytes.2017.read.compile.evaluate.Rd
 3642eafdce9899c72201e600de21e25d *man/msk.macrophytes.2017_ListTaxa.Rd
 3d37bda503e808131a047b326656c6b7 *man/msk.macrophytes.2017_RiverTypes_DefLimitsUnc.Rd
